# emo-lan

./: CHANGELOG.md  Cargo.toml  README.md  output.html
cli/: Cargo.toml
cli/src/: main.rs
common/src/: lib.rs
examples/: input.el  input.el 
lexer/: Cargo.toml
lexer/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs  output.html
src/: lib.rs
