[workspace]
members = ["lexer", "parser", "cli", "common"]

[package]
name = "emo-lan"
version = "0.1.0"
authors = ["Ryo Katsuse <ryokatsu0719@gmail.com>"]
edition = "2021"
description = "A language that compiles emoji-based syntax into HTML."
license = "MIT"
repository = "https://github.com/ryokatsuse/emo-lan"